Fixing the Image Slider on fabriceColorId, Navigation for the seasons, searching on mobile

--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -809,6 +809,10 @@ header {
 }
 
 .search-overlay {
+  @include respond(large-mobile) {
+    display: none;
+  }
+
   position: fixed;
   z-index: 999999;
   top: 0;
